[package]
edition.workspace = true
name = "common"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.11.22", features = [ "blocking", "rustls-tls" ], default-features = false }
thiserror.workspace = true
