[package]
description = "Dojo specific bindings generator based on Cainome."
edition.workspace = true
license-file.workspace = true
name = "dojo-bindgen"
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
camino.workspace = true
convert_case.workspace = true
starknet.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

# Some issue with CI on windows, need to be investigated.
# https://github.com/dojoengine/dojo/actions/runs/7736050751/job/21092743552?pr=1501#step:6:249
# dojo-test-utils = { path = "../dojo-test-utils", features = [ "build-examples" ] }

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.2.2" }
