[package]
name = "dojo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
dojo-lang = { path = "../dojo-lang" }
dojo-project = { path = "../dojo-project" }
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-starknet.workspace = true
serde.workspace = true
smol_str.workspace = true
starknet.workspace = true
thiserror.workspace = true
toml.workspace = true

[[bin]]
name = "dojo"
path = "src/cli.rs"
