[package]
edition = "2021"
name = "dojo-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
dojo-types = { path = "../dojo-types" }
starknet-crypto.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { version = "1.16", features = [ "sync", "time" ], default-features = false }

[dev-dependencies]
camino.workspace = true
dojo-test-utils = { path = "../dojo-test-utils", features = [ "build-examples" ] }
dojo-world = { path = "../dojo-world" }
