[package]
edition = "2021"
name = "dojo-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
async-std = { version = "1.12.0", features = [ "std", "unstable" ], default-features = false }
async-trait.workspace = true
dojo-types = { path = "../dojo-types" }
starknet-crypto.workspace = true
starknet.workspace = true
thiserror.workspace = true

[dev-dependencies]
camino.workspace = true
dojo-test-utils = { path = "../dojo-test-utils", features = [ "build-examples" ] }
dojo-world = { path = "../dojo-world" }
tokio.workspace = true
