[package]
name = "dojo-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
apibara-core = { git = "https://github.com/apibara/apibara", rev = "8490dcbb651c4fc1c33f6dfb7db48c078e907321" }
apibara-sdk = { git = "https://github.com/apibara/apibara", rev = "8490dcbb651c4fc1c33f6dfb7db48c078e907321" }
clap.workspace = true
futures = "0.3.26"
tokio = { version = "1.20.1", features = ["full"] }
tonic = { version = "0.8.3", features = ["tls", "tls-roots"] }
log = "0.4.17"
futures-util = "0.3.26"
tokio-stream = "0.1.11"
serde.workspace = true
sha3 = "0.10.6"
juniper = "0.15.11"
juniper_relay_connection = "0.1.1"
juniper_actix = "0.4.0"
actix-web = "4.3.0"
actix-cors = "0.6.4"
env_logger.workspace = true
starknet.workspace = true
url = "2.2.2"
sqlx = { version = "0.6.2", features = [
    "runtime-actix-native-tls",
    "uuid",
    "chrono",
    "macros",
    "offline"
] }
num = "0.4.0"
hex = "0.4.3"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]

[[bin]]
name = "dojo-indexer"
path = "src/cli.rs"
