[package]
name = "dojo-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-cors = "0.6.4"
anyhow.workspace = true
apibara-core = { git = "https://github.com/ponderingdemocritus/dna" }
apibara-sdk = { git = "https://github.com/ponderingdemocritus/dna" }
apibara-starknet = { git = "https://github.com/ponderingdemocritus/dna" }
clap.workspace = true
ctrlc = "3.2.5"
futures = "0.3.26"
futures-util = "0.3.26"
hex = "0.4.3"
juniper = "0.15.11"
juniper_actix = "0.4.0"
log = "0.4.17"
num = "0.4.0"
serde.workspace = true
sha3 = "0.10.6"
sqlx = { version = "0.6.2", features = [
    "runtime-actix-native-tls",
    "uuid",
    "chrono",
    "macros",
    "offline",
] }
starknet.workspace = true
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = "0.7.7"
tonic = { version = "0.8.3", features = ["tls", "tls-roots"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.2.2"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]

[[bin]]
name = "dojo-indexer"
path = "src/cli.rs"
