[package]
name = "dojo-lang"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo capabilities and utilities on top of Starknet."

[features]
testing = []

[dependencies]
anyhow.workspace = true
assert_fs = "1.0.9"
camino.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-utils.workspace = true
convert_case.workspace = true
dojo-types = { path = "../dojo-types" }
dojo-world = { path = "../dojo-world" }
itertools.workspace = true
scarb.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "2.3.1"
smol_str.workspace = true
thiserror = "1.0.32"
tracing.workspace = true
salsa.workspace = true
sanitizer = "0.1.6"
starknet.workspace = true
url = "2.2.2"

[dev-dependencies]
cairo-lang-formatter.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-test-utils.workspace = true
env_logger = "0.10.0"
pretty_assertions.workspace = true
test-log.workspace = true
dojo-test-utils = { path = "../dojo-test-utils" }
