[package]
description = "Dojo capabilities and utilities on top of Starknet."
edition.workspace = true
license-file.workspace = true
name = "dojo-lang"
repository.workspace = true
version.workspace = true

[features]
testing = [  ]

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-debug.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-utils.workspace = true
camino.workspace = true
convert_case.workspace = true
directories = "5"
dojo-types = { path = "../dojo-types" }
dojo-world = { path = "../dojo-world", features = [ "manifest" ] }
indoc.workspace = true
itertools.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
salsa.workspace = true
scarb.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "2.3.1"
smol_str.workspace = true
starknet.workspace = true
thiserror = "1.0.32"
tracing.workspace = true
url = "2.2.2"

[dev-dependencies]
cairo-lang-formatter.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-test-utils.workspace = true
dojo-test-utils = { path = "../dojo-test-utils" }
env_logger = "0.10.0"
pretty_assertions.workspace = true
test-log.workspace = true
