[package]
description = "Dojo capabilities and utilities on top of Starknet."
edition.workspace = true
license-file.workspace = true
name = "dojo-lang"
repository.workspace = true
version.workspace = true

[features]
testing = [  ]

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-formatter.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-utils.workspace = true
camino.workspace = true
convert_case.workspace = true
dojo-types.workspace = true
dojo-world = { workspace = true, features = [ "manifest", "metadata" ] }
indoc.workspace = true
itertools.workspace = true
regex.workspace = true
scarb.workspace = true
scarb-ui.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
starknet.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
cairo-lang-debug.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-test-utils.workspace = true
dojo-test-utils.workspace = true
once_cell.workspace = true
salsa.workspace = true
test-log.workspace = true
