[package]
name = "dojo-languge-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dojo-language-server"
path = "src/bin/language_server.rs"

[dependencies]
anyhow.workspace = true
dojo-lang = { path = "../dojo-lang" }
cairo-lang-compiler.workspace = true
cairo-lang-language-server.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-utils.workspace = true
log = "0.4.14"
tokio = { version = "1.18.2", features = ["full", "sync"] }
tower-lsp = "0.17.0"
salsa = "0.16.1"
smol_str.workspace = true
