[package]
edition.workspace = true
name = "dojo-language-server"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dojo-language-server"
path = "src/bin/language_server.rs"

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-language-server.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-utils.workspace = true
clap.workspace = true
dojo-lang = { path = "../dojo-lang" }
log = "0.4.14"
salsa = "0.16.1"
smol_str.workspace = true
tokio = { version = "1.18.2", features = [ "full", "sync" ] }
tower-lsp = "0.20.0"
