[package]
name = "dojo-macros"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo related macros for tenosynovitis-free development."

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full", "fold" ]}
