[package]
name = "dojo-mock-servers"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Mock servers"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2.2", features = ["derive"] }
log = "0.4"
futures = "0.3"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"] }
rand = "0.8"
tarpc = { version = "0.33", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "server"
path = "src/main.rs"
