[package]
name = "dojo-project"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo project specification. For example, crates and flags used for compilation."

[dependencies]
anyhow.workspace = true
cairo-lang-project.workspace = true
serde.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml.workspace = true
cairo-lang-filesystem.workspace = true
starknet.workspace = true

[dev-dependencies]
indoc.workspace = true
test-log.workspace = true
