[package]
name = "dojo-project"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo project specification. For example, crates and flags used for compilation."

[dependencies]
anyhow.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-project.workspace = true
camino.workspace = true
dojo-lang = { path = "../dojo-lang" }
serde.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml = "0.7.1"
cairo-lang-filesystem.workspace = true
scarb.workspace = true
starknet.workspace = true
url = "2.2.2"
async-trait = "0.1.68"
serde_json.workspace = true

[dev-dependencies]
indoc.workspace = true
test-log.workspace = true
