[package]
name = "dojo-test-runner"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo tests runner. Used to run tests written in Cairo."

[dependencies]
anyhow.workspace = true
camino.workspace = true
cairo-felt.workspace = true
cairo-vm.workspace = true
cairo-lang-casm.workspace = true
clap.workspace = true
colored.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-debug.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo.git", rev = "439da05a031c2eda263c4ce12d0b71d20f38205f" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo.git", rev = "439da05a031c2eda263c4ce12d0b71d20f38205f" }
cairo-lang-semantic.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-syntax.workspace = true
dojo-lang = { path = "../dojo-lang" }
dojo-project = { path = "../dojo-project" }
itertools.workspace = true
num-bigint.workspace = true
rayon.workspace = true
salsa.workspace = true
scarb.workspace = true
thiserror.workspace = true

[[bin]]
name = "dojo-test"
path = "src/cli.rs"
