[package]
name = "dojo-test-runner"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo tests runner. Used to run tests written in Cairo."

[dependencies]
anyhow.workspace = true
camino.workspace = true
cairo-felt.workspace = true
cairo-lang-casm.workspace = true
clap.workspace = true
colored.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-debug.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-runner = { version = "1.0.0-alpha.6", git = "https://github.com/starkware-libs/cairo.git" }
cairo-lang-sierra = { version = "1.0.0-alpha.6", git = "https://github.com/starkware-libs/cairo.git" }
cairo-lang-sierra-to-casm = { version = "1.0.0-alpha.6", git = "https://github.com/starkware-libs/cairo.git" }
cairo-lang-semantic.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-test-runner = { version = "1.0.0-alpha.6", git = "https://github.com/starkware-libs/cairo.git" }
cairo-lang-utils.workspace = true
dojo-lang = { path = "../dojo-lang" }
itertools.workspace = true
num-bigint.workspace = true
rayon.workspace = true
salsa.workspace = true
scarb.workspace = true
thiserror.workspace = true
unescaper = "0.1.1"

[[bin]]
name = "dojo-test"
path = "src/cli.rs"
