[package]
name = "dojo-test-runner"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo tests runner. Used to run tests written in Cairo."

[dependencies]
anyhow.workspace = true
camino.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-test-runner.workspace = true
clap.workspace = true
dojo-lang = { path = "../dojo-lang" }
scarb.workspace = true
semver.workspace = true

[[bin]]
name = "dojo-test"
path = "src/cli.rs"
