[package]
edition.workspace = true
license-file.workspace = true
name = "dojo-test-utils"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
assert_fs = "1.0.9"
async-trait.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-project.workspace = true
cairo-lang-starknet.workspace = true
camino.workspace = true
dojo-lang = { path = "../dojo-lang" }
dojo-world = { path = "../dojo-world", features = [ "manifest", "migration" ] }
jsonrpsee = { version = "0.16.2", features = [ "server" ] }
katana-core = { path = "../katana/core" }
katana-executor = { workspace = true, features = [ "blockifier" ] }
katana-primitives = { path = "../katana/primitives" }
katana-rpc = { path = "../katana/rpc/rpc" }
katana-rpc-api = { path = "../katana/rpc/rpc-api" }
scarb-ui.workspace = true
scarb.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
smol_str.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { version = "1.28.0", features = [ "full" ] }
toml = "0.7.1"
tracing.workspace = true
url = "2.2.2"

[build-dependencies]
assert_fs = "1.0.9"
camino.workspace = true
dojo-lang = { path = "../dojo-lang" }
scarb-ui.workspace = true
scarb.workspace = true

[features]
build-examples = [  ]
