[package]
edition = "2021"
name = "dojo-types"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = { version = "0.5.3", features = [ "serde" ] }
hex = "0.4.3"
itertools.workspace = true
serde.workspace = true
starknet.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
