[package]
edition.workspace = true
name = "dojo-types"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint.workspace = true
hex = "0.4.3"
itertools.workspace = true
serde.workspace = true
starknet.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

serde_json.workspace = true
