[package]
edition.workspace = true
license-file.workspace = true
license.workspace = true
name = "dojo-utils"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { version = "1.32.0", features = [ "time" ], default-features = false }

[dev-dependencies]
assert_matches.workspace = true
dojo-test-utils.workspace = true
