[package]
description = "Dojo world specification. For example, crates and flags used for compilation."
edition.workspace = true
license-file.workspace = true
name = "dojo-world"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-project.workspace = true
cairo-lang-starknet.workspace = true
camino.workspace = true
convert_case.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
smol_str.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
thiserror.workspace = true
tracing.workspace = true

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.1.7", features = ["abigen-rs"] }
dojo-types = { path = "../dojo-types", optional = true }
http = { version = "0.2.9", optional = true }
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api", rev = "af2c17f7b19ef5b9898f458d97a90055c3605633", features = [ "with-hyper-rustls" ], optional = true }
scarb = { git = "https://github.com/software-mansion/scarb", tag = "v2.4.0", optional = true }
tokio = { version = "1.32.0", features = [ "time" ], default-features = false, optional = true }
url = { version = "2.2.2", optional = true }

[dev-dependencies]
assert_fs = "1.0.9"
assert_matches.workspace = true
dojo-lang = { path = "../dojo-lang" }
dojo-test-utils = { path = "../dojo-test-utils" }
tokio.workspace = true
toml.workspace = true

[features]
contracts = [ "dep:dojo-types", "dep:http" ]
manifest = [ "contracts", "dep:dojo-types", "dep:url" ]
metadata = [ "dep:ipfs-api-backend-hyper", "dep:scarb", "dep:url" ]
migration = [ "dep:tokio" ]
