[package]
description = "Dojo world specification. For example, crates and flags used for compilation."
edition.workspace = true
license-file.workspace = true
name = "dojo-world"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-project.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-starknet.workspace = true
camino.workspace = true
convert_case.workspace = true
dojo-utils = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
smol_str.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
thiserror.workspace = true
topological-sort.workspace = true
tracing.workspace = true

cainome.workspace = true
dojo-types = { path = "../dojo-types", optional = true }
http = { workspace = true, optional = true }
ipfs-api-backend-hyper = { workspace = true, optional = true }
scarb = { workspace = true, optional = true }
tokio = { version = "1.32.0", features = [ "time" ], default-features = false, optional = true }
toml.workspace = true
url = { workspace = true, optional = true }
walkdir.workspace = true

[dev-dependencies]
assert_fs.workspace = true
assert_matches.workspace = true
dojo-lang.workspace = true
dojo-test-utils = { path = "../dojo-test-utils" }
katana-runner.workspace = true
similar-asserts.workspace = true
tempfile.workspace = true
tokio.workspace = true

[features]
contracts = [ "dep:dojo-types", "dep:http", "dep:num-traits" ]
manifest = [ "contracts", "dep:dojo-types", "dep:scarb", "dep:url" ]
metadata = [ "dep:ipfs-api-backend-hyper", "dep:scarb", "dep:url" ]
migration = [ "dep:dojo-utils", "dep:scarb", "dep:tokio", "manifest" ]
