[package]
name = "dojo-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
apibara-sdk = { git = "https://github.com/wraitii/apibara-rust-sdk" }
clap = { version = "4.0", features = ["derive"] }
sqlite = "0.30.3"
literal = "0.3.4"


[[bin]]
name = "dojo-index"
path = "src/cli.rs"
