[package]
name = "katana-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Katana core implementation."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blockifier.workspace = true
futures = "0.3"
tokio.workspace = true
tracing = "0.1.34"
starknet_api.workspace = true
starknet.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0.70"
cairo-lang-starknet.workspace = true
rand = { version = "0.8.5", features = ["small_rng"] }
lazy_static = "1.4.0"
flate2 = "1.0.26"
bincode = "1.3.3"
serde_with.workspace = true
cairo-lang-casm.workspace = true
cairo-vm = "0.3.0-rc1"
