[package]
name = "katana-rpc"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Katana RPC Implementation."

[dependencies]
anyhow = "1.0.40"
blockifier.workspace = true
cairo-lang-starknet.workspace = true
tokio.workspace = true
flate2.workspace = true
hex = { version = "0.4.3", default-features = false }
jsonrpsee = { version = "0.16.2", features = [ "full" ] }
katana-core = { path = "../katana-core" }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
starknet.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
hyper = "0.14.20"
tower-http = { version = "0.4.0", features = [ "full" ] }
tower = { version = "0.4.13", features = [ "full" ] }

[dev-dependencies]
assert_matches = "1.5.0"
dojo-test-utils = { path = "../dojo-test-utils" }
starknet.workspace = true
url = "2.3.1"
