[package]
name = "katana-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
katana-core = { path = "../katana/core", default-features = false }
katana-rpc = { path = "../katana/rpc", default-features = false }
lazy_static.workspace = true
tokio.workspace = true
