[package]
description = "A fast and lightweight local Starknet development sequencer."
edition.workspace = true
license-file.workspace = true
name = "katana"
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
env_logger.workspace = true
katana-core = { path = "core" }
katana-rpc = { path = "rpc" }
log.workspace = true
starknet_api.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
