[package]
description = "A fast and lightweight local Starknet development sequencer."
edition.workspace = true
license-file.workspace = true
name = "katana"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
hyper.workspace = true
katana-core = { path = "core" }
katana-rpc = { path = "rpc" }
serde_json.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

# Metrics
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-process = "1.0.9"
metrics-util = "0.15.0"

[target.'cfg(not(windows))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-ctl = { version = "0.5.0", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"

[features]
default = [ "jemalloc", "messaging" ]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl"]
jemalloc-prof = ["jemalloc", "jemallocator?/profiling"]
messaging = [ "katana-core/messaging" ]
starknet-messaging = [ "katana-core/starknet-messaging", "messaging" ]
