[package]
description = "A fast and lightweight local Starknet development sequencer."
edition.workspace = true
license-file.workspace = true
name = "katana"
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
katana-core = { path = "core" }
katana-rpc = { path = "rpc" }
metrics = { path = "../metrics" }
metrics-process.workspace = true
serde_json.workspace = true
starknet_api.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"

[features]
default = [ "jemalloc", "messaging" ]
jemalloc = [ "metrics/jemalloc" ]
messaging = [ "katana-core/messaging" ]
starknet-messaging = [ "katana-core/starknet-messaging", "messaging" ]
