[package]
edition.workspace = true
name = "dojo-metrics"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hyper = { workspace = true, features = [ "http1", "http2", "server", "tcp" ] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Metrics
metrics-exporter-prometheus = "0.14.0"
metrics-process.workspace = true
metrics-util = "0.16.3"
metrics.workspace = true

[target.'cfg(not(windows))'.dependencies]
jemalloc-ctl = { version = "0.5.0", optional = true }
jemallocator = { version = "0.5.0", optional = true }

[features]
default = [ "jemalloc" ]
jemalloc = [ "dep:jemalloc-ctl", "dep:jemallocator" ]
jemalloc-prof = [ "jemalloc", "jemallocator?/profiling" ]
