[package]
edition.workspace = true
name = "dojo-metrics"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hyper = { workspace = true, features = [ "http1", "http2", "server", "tcp" ] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Metrics
metrics-exporter-prometheus = "0.12.1"
metrics-process = "=1.0.14"
metrics-util = "0.15.0"
metrics.workspace = true
reth-metrics-derive = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.2.0-beta.4" }

[target.'cfg(not(windows))'.dependencies]
jemalloc-ctl = { version = "0.5.0", optional = true }
jemallocator = { version = "0.5.0", optional = true }

[features]
default = [ "jemalloc" ]
jemalloc = [ "dep:jemalloc-ctl", "dep:jemallocator" ]
jemalloc-prof = [ "jemalloc", "jemallocator?/profiling" ]
