[package]
edition.workspace = true
name = "dojo-metrics"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
http-body-util = "0.1"
hyper = { workspace = true, features = [ "http1", "http2", "server" ] }
hyper-util = { version = "0.1", features = [ "tokio" ] }
thiserror.workspace = true
tokio = { workspace = true, features = [ "net" ] }
tracing.workspace = true

# Metrics
metrics.workspace = true
metrics-derive = "0.1"
metrics-exporter-prometheus = "0.15.3"
metrics-process = "2.1.0"
metrics-util = "0.17.0"

[target.'cfg(not(windows))'.dependencies]
jemalloc-ctl = { version = "0.5.0", optional = true }
jemallocator = { version = "0.5.0", optional = true }

[features]
default = [ "jemalloc" ]
jemalloc = [ "dep:jemalloc-ctl", "dep:jemallocator" ]
jemalloc-prof = [ "jemalloc", "jemallocator?/profiling" ]
